@@ -465,6 +465,9 @@ Other memory:
 	  higher level, the printf output is more readable.
 	* Fixed a bug in file system cleanup:  A list was being deleted
 	  before the buffers contained in the list.
+	* Fixed a bug in the wait-for-message-queue-not-empty logic.
+	* Added a test of timed mqueue operations; detected and corrected
+	  some mqueue errors.
 	* Started m68322
 </pre></ul>
 
